--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,14 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'org.ebs.SlimeEditor'
+        )
+    }
+}
+
 test {
     useJUnitPlatform()
 }
